[tool.poetry]
name = "sym-models"
version = "0.1.0"
description = "Provides reinforcement learning environments for various symbolic mathematical equation with baselines"
authors = ["Mohit-coder-droid <mohitsahuandmohitsahu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.7.1"
torch-geometric = "^2.6.1"
julia = "^0.6.2"
stable-baselines3 = "^2.7.0"
gymnasium = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
